# TlacuiaGCL-Cpp

./: .gitignore  BACKLOG_AUDITORIA_COMPAT.md  CMakeLists.txt  IMPLEMENTACION_CONCESIONES.md  ROADMAP.md  build_and_run.sh  build_windows.py
app/: CMakeLists.txt  main.cpp
app/include/app/: AboutDialog.h  AgregarProductoDialog.h  AlertDialog.h  CalculatorWidget.h  ConcesionesWidget.h  CorteDialog.h  CortePdfExporter.h  EmisorPdfExporter.h  EmisorProfileDialog.h  EmisoresWidget.h  HistoryTableModel.h  HistoryWidget.h  MainWindow.h  NuevaConcesionDialog.h  PdfDocumentBase.h  SaveDialog.h  SettingsDialog.h  SplashConcesionesWindow.h  UpdateDialog.h
app/resources/: icons.qrc  version_info.json
app/resources/icons/: icon.icns
app/resources/styles/: tlacuia.qss
app/src/: AboutDialog.cpp  AgregarProductoDialog.cpp  AlertDialog.cpp  CalculatorWidget.cpp  ConcesionesWidget.cpp  CorteDialog.cpp  CortePdfExporter.cpp  EmisorPdfExporter.cpp  EmisorProfileDialog.cpp  EmisoresWidget.cpp  HistoryTableModel.cpp  HistoryWidget.cpp  MainWindow.cpp  NuevaConcesionDialog.cpp  PdfDocumentBase.cpp  SaveDialog.cpp  SettingsDialog.cpp  SplashConcesionesWindow.cpp  UpdateDialog.cpp
capi/: CMakeLists.txt
capi/include/capi/: calculadora_capi.h
capi/src/: calculadora_capi.cpp
cmake/: CompilerOptions.cmake  FindDependencies.cmake
core/: CMakeLists.txt
core/include/core/: AppConfig.h  CalculationScenario.h  ConcesionRepository.h  DatabaseManager.h  DocumentoRepository.h  EmisorRepository.h  FolioRepository.h  LibreriaConfigRepository.h  PriceCalculator.h  ProductoRepository.h
core/src/: AppConfig.cpp  ConcesionRepository.cpp  DatabaseManager.cpp  DocumentoRepository.cpp  EmisorRepository.cpp  FolioRepository.cpp  LibreriaConfigRepository.cpp  PriceCalculator.cpp  ProductoRepository.cpp
tests/: CMakeLists.txt  test_price_calculator.cpp  test_producto_repository.cpp
